# Realtime-Photometric-Stereo

./: .gitignore  CMakeLists.txt  LED.txt  README.md
src/: calibration.cpp  calibration.h  camera.cpp  camerawidget.cpp  camerawidget.h  lights.cpp  lights.h  mainwindow.cpp  mainwindow.h  modelwidget.cpp  modelwidget.h  normalswidget.cpp  normalswidget.h  photometricstereo.cpp  photometricstereo.h  rs_cam.cpp  rs_cam.h  utils.cpp  utils.h
